--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
         background-color: #45a049;
       }
     </style>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6DD01YWPEH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6DD01YWPEH');
+</script>
   </head>
   <body>
     <div class="score">Score: 0</div>
